--- a/app/src/main/res/layout/song_form_dashboard.xml
+++ b/app/src/main/res/layout/song_form_dashboard.xml
@@ -2,8 +2,10 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv"
-    android:layout_width="200dp"
-    android:layout_height="wrap_content">
+    android:layout_width="150dp"
+    android:elevation="4dp"
+    android:background="@color/color_bottom_sheet_navigation_bar"
+    android:layout_height="200dp">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/card"
@@ -39,11 +41,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <android.support.constraint.ConstraintLayout
+        <LinearLayout
             android:id="@+id/cl_information"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:background="@color/transparent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_bottom_sheet_navigation_bar"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/album_image">
@@ -57,10 +59,10 @@
                 android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:gravity="center"
-                android:maxLines="2"
+                android:maxLines="1"
                 android:singleLine="false"
-                android:textColor="@color/w"
-                android:textSize="16sp"
+                android:textColor="@color/text_gray_dark"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toTopOf="@+id/artist_name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -77,12 +79,12 @@
                 android:gravity="center"
                 android:maxLines="1"
                 android:singleLine="false"
-                android:textColor="@color/separator_gray"
+                android:textColor="@color/text_gray_light"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
-        </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
 
