--- a/app/src/main/res/layout/song_form_dashboard.xml
+++ b/app/src/main/res/layout/song_form_dashboard.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv"
     android:layout_width="150dp"
-    android:elevation="4dp"
     android:background="@color/color_bottom_sheet_navigation_bar"
     android:layout_height="200dp">
 
