--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -6,61 +6,62 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_bottom_sheet_navigation_bar"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    tools:context="com.nimtego.plectrum.presentation.migrate_kotlin.ui.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_scrollFlags="scroll|snap|enterAlways"
-        android:background="@android:color/transparent">
+        android:background="@android:color/transparent"
+        android:translationZ="0.1dp"
+        app:elevation="0dp"
+        app:layout_scrollFlags="scroll|snap|enterAlways">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/color_bottom_sheet_navigation_bar"
-            android:visibility="gone"
-            app:layout_scrollFlags="scroll|snap|enterAlways" />
+        <!--<android.support.v7.widget.Toolbar-->
+        <!--android:id="@+id/toolbar"-->
+        <!--android:visibility="gone"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="?attr/actionBarSize"-->
+        <!--android:background="?attr/colorPrimary"-->
+        <!--app:layout_scrollFlags="scroll|enterAlways" />-->
 
         <android.support.v7.widget.CardView
             android:id="@+id/cardS"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardElevation="5dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="12dp"
+            android:background="@color/w"
             app:cardUseCompatPadding="true"
-            app:layout_scrollFlags="scroll|enterAlways">
+            app:layout_scrollFlags="scroll|snap|enterAlways">
 
             <android.support.v7.widget.SearchView
                 android:id="@+id/searchViewQuery"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginRight="20dp"
                 app:iconifiedByDefault="false"
-
                 app:queryHint="Search event" />
-
-            <ImageButton
-                android:id="@+id/imageViewSearchMenu"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_gravity="end|center_vertical"
-                android:layout_marginRight="5dp"
-                android:onClick="PopupShowMenu" />
 
         </android.support.v7.widget.CardView>
     </android.support.design.widget.AppBarLayout>
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="64dp">
+        android:layout_gravity="fill_vertical"
+        android:background="@color/color_background_dark"
+        android:focusableInTouchMode="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:orientation="vertical"
+
+            android:paddingTop="64dp">
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
@@ -76,16 +77,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:text="New"
+                            android:textSize="24sp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:text="New"
-                        android:textColor="@color/signupColor"
-                        android:textSize="14sp" />
+
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recycler_view_new_media"
@@ -118,8 +119,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         android:text="Hot"
-                        android:textColor="@color/signupColor"
-                        android:textSize="14sp" />
+                        android:textSize="24sp"  />
 
                     <FrameLayout
                         android:layout_width="match_parent"
@@ -158,8 +158,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         android:text="Songs"
-                        android:textColor="@color/signupColor"
-                        android:textSize="14sp" />
+                        android:textSize="24sp"  />
 
                     <FrameLayout
                         android:layout_width="match_parent"
@@ -197,8 +196,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         android:text="Albums"
-                        android:textColor="@color/signupColor"
-                        android:textSize="14sp" />
+                        android:textSize="24sp"  />
 
                     <FrameLayout
                         android:layout_width="match_parent"
@@ -223,8 +221,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="Video"
-                android:textColor="@color/signupColor"
-                android:textSize="14sp" />
+                android:textSize="24sp" />
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -240,6 +237,6 @@
                 </android.support.v7.widget.RecyclerView>
             </FrameLayout>
         </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
 
