--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -14,8 +14,7 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:translationZ="0.1dp"
-        app:elevation="0dp"
-        app:layout_scrollFlags="scroll|snap|enterAlways">
+        app:elevation="0dp">
 
         <!--<android.support.v7.widget.Toolbar-->
         <!--android:id="@+id/toolbar"-->
@@ -27,14 +26,15 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/cardS"
+            app:layout_scrollFlags="scroll|enterAlways"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginTop="12dp"
+            android:layout_marginEnd="8dp"
+            app:cardElevation="5dp"
             android:background="@color/w"
-            app:cardUseCompatPadding="true"
-            app:layout_scrollFlags="scroll|snap|enterAlways">
+            app:cardUseCompatPadding="true">
 
             <android.support.v7.widget.SearchView
                 android:id="@+id/searchViewQuery"
@@ -45,6 +45,8 @@
                 app:queryHint="Search event" />
 
         </android.support.v7.widget.CardView>
+
+
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
@@ -57,35 +59,33 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:orientation="vertical"
-
             android:paddingTop="64dp">
 
             <android.support.v7.widget.CardView
+                app:cardElevation="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_extra_small"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
                 android:layout_marginEnd="@dimen/padding_extra_small"
-                app:cardBackgroundColor="@color/color_bottom_sheet_navigation_bar"
-                app:layout_collapseMode="pin"
-                app:layout_scrollFlags="snap">
+                app:cardBackgroundColor="@color/color_bottom_sheet_navigation_bar">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginTop="8dp"
-                            android:layout_marginBottom="8dp"
-                            android:text="New"
-                            android:textSize="24sp" />
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:text="New"
+                        android:textSize="24sp" />
 
 
                     <android.support.v7.widget.RecyclerView
@@ -100,6 +100,7 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
+                app:cardElevation="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_extra_small"
@@ -119,7 +120,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         android:text="Hot"
-                        android:textSize="24sp"  />
+                        android:textSize="24sp" />
 
                     <FrameLayout
                         android:layout_width="match_parent"
@@ -139,6 +140,7 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
+                app:cardElevation="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_extra_small"
@@ -158,7 +160,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         android:text="Songs"
-                        android:textSize="24sp"  />
+                        android:textSize="24sp" />
 
                     <FrameLayout
                         android:layout_width="match_parent"
@@ -177,6 +179,7 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
+                app:cardElevation="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_extra_small"
@@ -196,7 +199,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         android:text="Albums"
-                        android:textSize="24sp"  />
+                        android:textSize="24sp" />
 
                     <FrameLayout
                         android:layout_width="match_parent"
