--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -16,25 +16,25 @@
         android:translationZ="0.1dp"
         app:elevation="0dp">
 
-        <!--<android.support.v7.widget.Toolbar-->
-        <!--android:id="@+id/toolbar"-->
-        <!--android:visibility="gone"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="?attr/actionBarSize"-->
-        <!--android:background="?attr/colorPrimary"-->
-        <!--app:layout_scrollFlags="scroll|enterAlways" />-->
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:visibility="gone"
+            app:layout_scrollFlags="scroll|enterAlways" />
 
         <android.support.v7.widget.CardView
             android:id="@+id/cardS"
-            app:layout_scrollFlags="scroll|enterAlways"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="6dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="8dp"
-            app:cardElevation="5dp"
+            android:layout_marginEnd="6dp"
             android:background="@color/w"
-            app:cardUseCompatPadding="true">
+            app:cardElevation="5dp"
+            app:cardUseCompatPadding="true"
+            app:layout_scrollFlags="scroll|snap|enterAlways">
 
             <android.support.v7.widget.SearchView
                 android:id="@+id/searchViewQuery"
@@ -65,13 +65,13 @@
             android:paddingTop="64dp">
 
             <android.support.v7.widget.CardView
-                app:cardElevation="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_extra_small"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
                 android:layout_marginEnd="@dimen/padding_extra_small"
-                app:cardBackgroundColor="@color/color_bottom_sheet_navigation_bar">
+                app:cardBackgroundColor="@color/color_bottom_sheet_navigation_bar"
+                app:cardElevation="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -93,20 +93,21 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp">
+                        android:layout_marginBottom="8dp"
+                        android:nestedScrollingEnabled="false">
 
                     </android.support.v7.widget.RecyclerView>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                app:cardElevation="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_extra_small"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
                 android:layout_marginEnd="@dimen/padding_extra_small"
-                app:cardBackgroundColor="@color/color_bottom_sheet_navigation_bar">
+                app:cardBackgroundColor="@color/color_bottom_sheet_navigation_bar"
+                app:cardElevation="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -132,7 +133,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:layout_marginBottom="8dp">
+                            android:layout_marginBottom="8dp"
+                            android:nestedScrollingEnabled="false">
 
                         </android.support.v7.widget.RecyclerView>
                     </FrameLayout>
@@ -140,13 +142,13 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                app:cardElevation="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_extra_small"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
                 android:layout_marginEnd="@dimen/padding_extra_small"
-                app:cardBackgroundColor="@color/color_bottom_sheet_navigation_bar">
+                app:cardBackgroundColor="@color/color_bottom_sheet_navigation_bar"
+                app:cardElevation="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -171,7 +173,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:layout_marginBottom="8dp">
+                            android:layout_marginBottom="8dp"
+                            android:nestedScrollingEnabled="false">
 
                         </android.support.v7.widget.RecyclerView>
                     </FrameLayout>
@@ -179,13 +182,13 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                app:cardElevation="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_extra_small"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
                 android:layout_marginEnd="@dimen/padding_extra_small"
-                app:cardBackgroundColor="@color/color_bottom_sheet_navigation_bar">
+                app:cardBackgroundColor="@color/color_bottom_sheet_navigation_bar"
+                app:cardElevation="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -210,7 +213,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:layout_marginBottom="8dp">
+                            android:layout_marginBottom="8dp"
+                            android:nestedScrollingEnabled="false">
 
                         </android.support.v7.widget.RecyclerView>
                     </FrameLayout>
@@ -235,7 +239,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp">
+                    android:layout_marginBottom="8dp"
+                    android:nestedScrollingEnabled="false">
 
                 </android.support.v7.widget.RecyclerView>
             </FrameLayout>
