--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -29,7 +29,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
-            android:layout_marginTop="12dp"
             android:layout_marginEnd="6dp"
             android:background="@color/w"
             app:cardElevation="5dp"
@@ -40,8 +39,8 @@
                 android:id="@+id/searchViewQuery"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginEnd="20dp"
-                app:iconifiedByDefault="false"
+                android:layout_gravity="end"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:queryHint="Search event" />
 
         </android.support.v7.widget.CardView>
@@ -246,5 +245,16 @@
             </FrameLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="0dp"
+        android:layout_gravity="bottom"
+        android:background="@color/color_vendor_dark_grey_blue"
+        android:layout_marginStart="0dp"
+        app:itemTextColor="@color/w"
+        app:menu="@menu/navigation"/>
 </android.support.design.widget.CoordinatorLayout>
 
