PTR-85 Bottom navigation.  add:   - navigation   - content form   - adapters for content

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,6 +23,7 @@
     <dimen name="value_text_view">8sp</dimen>
 
     <!-- Text size -->
+    <dimen name="text_view_size_header">18sp</dimen>
     <!-- Standard Styles -->
     <!-- @link https://www.google.com/design/spec/style/typography.html#typography-styles -->
     <eat-comment />
