--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,14 +33,23 @@
         <!--<item name="colorAccent">@color/colorAccent</item>-->
     </style>
 
-<!--    <style name="TextViewValue" parent="Base.Widget.MaterialComponents.TextInputEditText">
-        <item name="android:textSize">@dimen/value_text_view</item>
-        <item name="android:textColor">@color/edit_text_color</item>
-        <item name="android:textColorHint">@color/color_vendor_dark_grey_blue</item>
-        <item name="android:textColorHighlight">@color/edit_text_color</item>
+    <style name="HeaderTextStyle" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">@dimen/text_view_size_header</item>
+        <item name="android:textColor">@color/text_view_header_color</item>
         <item name="android:lineSpacingExtra">6sp</item>
         <item name="android:drawablePadding">2dp</item>
-    </style>-->
+    </style>
+
+    <style name="MoreTextStyle" parent="HeaderTextStyle">
+        <item name="android:textColor">@color/click_text_view_header_color</item>
+    </style>
+
+    <!--<style name="TextViewValue" parent="Base.Widget.MaterialComponents.TextInputEditText">-->
+        <!--<item name="android:textSize">@dimen/value_text_view</item>-->
+        <!--<item name="android:textColor">@color/edit_text_color</item>-->
+        <!--<item name="android:textColorHint">@color/color_vendor_dark_grey_blue</item>-->
+        <!--<item name="android:textColorHighlight">@color/edit_text_color</item>-->
+    <!--</style>-->
 
     <style name="AppTheme.WhiteAccent">
         <item name="colorAccent">@color/click_accent</item> <!-- Whatever color you want-->
