--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,10 @@
     <color name="edit_text_shape_color">#FFFFFF</color>
     <color name="focus_color">#ffff8100</color>
 
+    <!--Text view-->
+    <color name="text_view_header_color">#ff32404f</color>
+    <color name="click_text_view_header_color">#066e8a</color>
+
     <color name="signupColor">#066e8a</color>
     <color name="color_vendor_gradient_0_start">#ff397d6a</color>
     <color name="color_vendor_gradient_0_end">#ff10ad84</color>
