--- a/app/src/main/res/layout/dashboard_child_item.xml
+++ b/app/src/main/res/layout/dashboard_child_item.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv"
+    android:elevation="1dp"
     android:layout_width="150dp"
     android:layout_height="200dp">
 
