--- a/app/src/main/res/layout/dashboard_fragment_k.xml
+++ b/app/src/main/res/layout/dashboard_fragment_k.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cordinatorLayoutActivityA"
@@ -13,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
+        app:layout_behavior="com.nimtego.plectrum.presentation.ui.widget.behavior.SearchViewScrollBehavior"
         android:translationZ="0.1dp"
         app:elevation="0dp">
 
@@ -30,10 +32,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
             android:layout_marginEnd="6dp"
-            android:background="@color/w"
-            app:cardElevation="5dp"
-            app:cardUseCompatPadding="true"
-            app:layout_scrollFlags="scroll|snap|enterAlways">
+            android:background="@color/color_search_view"
+            app:cardElevation="4dp"
+            app:cardUseCompatPadding="true">
 
             <android.support.v7.widget.SearchView
                 android:id="@+id/searchViewQuery"
@@ -63,9 +64,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="0dp"
         android:layout_gravity="bottom"
-        android:background="@color/color_vendor_dark_grey_blue"
+        android:elevation="4dp"
+        app:itemIconTint="@drawable/navigation_bar_item_state"
+        app:itemTextColor="@drawable/navigation_bar_item_state"
+        android:background="@color/color_bottom_sheet_navigation_bar"
         android:layout_marginStart="0dp"
-        app:itemTextColor="@color/w"
         app:menu="@menu/navigation"/>
 </android.support.design.widget.CoordinatorLayout>
 
