--- a/app/src/main/res/layout/dashboard_music_tab_fragment.xml
+++ b/app/src/main/res/layout/dashboard_music_tab_fragment.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="fill_vertical"
     android:clipToPadding="false"
+    android:layoutAnimation="@anim/layout_animation_fall_down"
     android:focusableInTouchMode="true"
     android:paddingBottom="?attr/actionBarSize"
     android:paddingTop="?attr/actionBarSize">
