PTR-107-Navigation. Minor fix.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
         android:id="@+id/status_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/android_status_bar_height"
-        android:background="@color/status_bar_light_color" />
+        android:elevation="4dp"
+        android:background="@color/color_background_dark" />
 
     <FrameLayout
         android:id="@+id/main_container"
