--- a/app/src/main/res/layout/bottom_navigation_fragment.xml
+++ b/app/src/main/res/layout/bottom_navigation_fragment.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
             android:layout_marginEnd="6dp"
-            android:background="@color/color_search_view"
+            app:cardCornerRadius="10dp"
             app:cardElevation="4dp"
             app:cardUseCompatPadding="true">
             <!--app:layout_behavior="com.nimtego.plectrum.presentation.ui.widget.behavior.BottomNavigationBehavior"-->
@@ -25,6 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:elevation="2dp"
+                android:background="@drawable/rounded_shape"
                 android:gravity="center_vertical"
                 android:hint="@string/search"
                 app:layout_constraintEnd_toEndOf="parent"
