--- a/app/src/main/res/layout/layout_tab_content_parent_item.xml
+++ b/app/src/main/res/layout/layout_tab_content_parent_item.xml
@@ -2,10 +2,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/color_bottom_sheet_navigation_bar"
-    app:cardElevation="2dp">
+    card_view:cardElevation="1dp"
+    card_view:cardCornerRadius="10dp"
+    card_view:cardPreventCornerOverlap="false"
+    app:cardBackgroundColor="@color/color_bottom_sheet_navigation_bar">
 
     <LinearLayout
         android:layout_width="match_parent"
