--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -109,6 +109,7 @@
     <color name="divider_color_inactive">#ffc5c5c5</color>
     <color name="divider_color_light">#1932404f</color>
     <color name="color_background_dark">#fff6f6f6</color>
+    <color name="color_background_dark_2">#EEEDED</color>
 
     <color name="color_card_bank_label">#ff202020</color>
     <color name="color_card_view_activation_nfc">#ff638bdf</color>
