--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -107,7 +107,7 @@
     <color name="divider_color_pale_gray">#ffeff1f4</color>
     <color name="divider_color_active">#ff2f71e1</color>
     <color name="divider_color_inactive">#ffc5c5c5</color>
-    <color name="divider_color_light">#1932404f</color>
+    <color name="divider_color_light">#D1D3D6</color>
     <color name="color_background_dark">#fff6f6f6</color>
     <color name="color_background_dark_2">#EEEDED</color>
 
