--- a/app/src/main/res/layout/bottom_navigation_fragment.xml
+++ b/app/src/main/res/layout/bottom_navigation_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,6 +14,8 @@
         android:layout_height="wrap_content"
         android:background="@color/color_background_dark"
         android:fitsSystemWindows="true"
+        app:elevation="0dp"
+        android:translationZ="0.1dp"
         app:layout_behavior="com.nimtego.plectrum.presentation.ui.widget.behavior.AppBarLayoutBehaviorFix">
 
         <android.support.v7.widget.Toolbar
